<resources>
    <string name="app_name">WebServicesLab</string>
    <string name="title_activity_course">CourseActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_id_hint">Enter Course Id (Ex: TCSS450)</string>
    <string name="course_short_desc_hint">Enter Course Short Description (Ex:
     Mobile App Programming</string>
    <string name="course_long_desc_hint">Enter Course Long Description</string>
    <string name="course_prereqs_hint">Enter prereqs</string>
    <string name="add_course_text">Add Course</string>
    <string name="course_id_hint_edit">Enter Course Id to change</string>
    <string name="course_short_desc_hint_edit">Change short description</string>
    <string name="course_long_desc_hint_edit">Change long description</string>
    <string name="course_prereqs_hint_edit">Change prereqs</string>
    <string name="edit_course_text">Edit Course</string>
    <string name="userid_hint">Enter your userid</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="login_text">SIGN IN</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.webserviceslab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_FILE"> edu.uw.tacoma.mmuppa.webservicelab.LOGIN_FILE</string>

</resources>
